; ModuleID = '/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_loadlib.c_checkload.c'
source_filename = "/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_loadlib.c_checkload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [46 x i8] c"error loading module '%s' from file '%s':\0A\09%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @checkload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkload(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %8 = load i32, i32* %6, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @lua_pushstring(i32* %11, i8* %12)
  store i32 2, i32* %4, align 4
  br label %22

14:                                               ; preds = %3
  %15 = load i32*, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @lua_tostring(i32* %16, i32 1)
  %18 = load i8*, i8** %7, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @lua_tostring(i32* %19, i32 -1)
  %21 = call i32 @luaL_error(i32* %15, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %17, i8* %18, i32 %20)
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %14, %10
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @luaL_error(i32*, i8*, i32, i8*, i32) #1

declare dso_local i32 @lua_tostring(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
